# cw2-voicehub-plugin

./: README.md  cwplugin.json  main.py  pyproject.toml  settings.qml  widget_voicehub.qml
